[12][FEAT][BC] - can send email with token from gmail address. Polishing is needed.

--- a/src/main/resources/templates/passwordresettoken.html
+++ b/src/main/resources/templates/passwordresettoken.html
@@ -23,7 +23,7 @@
 	<p>
 	    Vous avez demandé une réinitialisation du mot de passe de votre compte Warhammer Market.<br/>
 	    Pour le réinitialiser, veuillez cliquer sur le lien suivant : <br/>
-	    <span th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}"></span>
+	    <span th:text="${passwordToken}"></span>
 	</p>
 	
 	<p>
