[12][FEAT][BC] - polishing and checking token validity when user open the reset password link

--- a/src/main/resources/templates/passwordresettoken.html
+++ b/src/main/resources/templates/passwordresettoken.html
@@ -22,8 +22,11 @@
 
 	<p>
 	    Vous avez demandé une réinitialisation du mot de passe de votre compte Warhammer Market.<br/>
-	    Pour le réinitialiser, veuillez cliquer sur le lien suivant : <br/>
-	    <span th:text="${'localhost:3000/password-forgotten/' + passwordToken}"></span>
+	    Pour le réinitialiser, veuillez cliquer sur le lien suivant (valable 24 heures) : <br/>
+	</p>
+	<p>
+		<a th:with="url=(@{|${baseUrl}/password-forgotten/${passwordToken}|})" th:href="${url}">Réinitialisation du mot de passe</a>
+
 	</p>
 	
 	<p>
