--- a/src/main/resources/templates/passwordchanged.html
+++ b/src/main/resources/templates/passwordchanged.html
@@ -32,7 +32,7 @@
     À bientôt sur Warhammer Market.
 </p>
 <p>
-    <img src="https://raw.githubusercontent.com/thymeleaf/thymeleaf-dist/master/src/artwork/thymeleaf%202016/thymeleaf_logo_white.png" alt="Warhammer Market logo" height="110" width="500"/>
+    <img src="https://raw.githubusercontent.com/globule554/patacrepes/main/public/assets/warhammer-shop-logo.png" alt="Warhammer Market logo" height="110" width="500"/>
 </p>
 </body>
 </html>
