--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -18,9 +18,9 @@
 </head>
 
 <body>
-	<p th:text="${'Bonjour ' + firstName + ' ' + lastName}"></p>
+	<p>bonjour, un visiteur du site vous à envoyé un message</p>
 
-	<p th:text="${subject}"></p>
+	<p th:text="${email}"></p>
 	<p th:utext="${message}"></p>
 		
 	</p>
@@ -29,7 +29,7 @@
 	    À bientôt sur Warhammer Market.
 	</p>
 	<p>
-        <img src="https://raw.githubusercontent.com/globule554/helloworld/master/share/warhammer-shop-logo.png" alt="Warhammer Market logo" height="110" width="500"/>
+         <img src="https://raw.githubusercontent.com/globule554/patacrepes/main/public/assets/warhammer-shop-logo.png" alt="Warhammer Market logo" height="110" width="500"/>
 	</p>
 </body>
 </html>
