ajour d'une virgule et d'un espace au mail de bienvenue, et inversion des paramètres firstName et lastName dans toutes les couches dans une tentative encore infructueuse de les faire apparaitre dans le bon ordre

--- a/src/main/resources/templates/welcomeMessage.html
+++ b/src/main/resources/templates/welcomeMessage.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<p th:text="${'Bonjour ' + firstName + ' ' + lastName + 'bienvenue sur Warhammer Market! '}"></p>
+<p th:text="${'Bonjour ' + firstName + ' ' + lastName + ',' + ' ' + 'bienvenue sur Warhammer Market! '}"></p>
 
 <p th:text="${email}"></p>
 <p th:utext="${message}"></p>
